# CSCI-4611

./: Assignment_02_Assessment.md  Assignment_03_Assessment.md  Assignment_03_Feedback.md  Assignment_04_Assessment.md  Assignment_05_Assessment.md  Lab_01_Feedback.md  README.md
a1_textrain/: README.md  a1_textrain.pde
a1_textrain/data/: Calibri-20.vlw  Calibri-Bold-32.vlw
dev/: README.md
dev/EarthquakeVisualization/: Makefile  README.md  camera.hpp  config.hpp  draw.hpp  earth.hpp  engine.hpp  graphics.hpp  main.cpp  quake.hpp  text.hpp
dev/EarthquakeVisualization/data/: sources.txt
dev/SoupCan/: config.h  config.h.in  example.cc  example.h  main.cc
dev/TextureDemo/: CMakeLists.txt  README.md  config.h  example.cc
dev/a2-carsoccer/: CMakeLists.txt  README.md  ball.h  car.h  car_soccer.cc  car_soccer.h  config.h  config.h.in  main.cc
dev/a2-carsoccer/data/: crowd.psd
dev/a3-earthquake/: CMakeLists.txt  README.md  config.h.in  date.cc  date.h  earth.cc  earth.h  earthquake.cc  earthquake.h  earthquake_database.cc  earthquake_database.h  main.cc  quake_app.cc  quake_app.h
dev/a4-dance/: CMakeLists.txt  README.md  amc_util.h  animated_character.cc  animated_character.h  config.h  config.h.in  dance_app.cc  dance_app.h  dance_floor.cc  dance_floor.h  main.cc  motion_clip.cc  motion_clip.h  pose.cc  pose.h  rotation_bounds.cc  rotation_bounds.h  simple_parser.cc  simple_parser.h  skeleton.cc  skeleton.h
dev/a4-dance/cmake/: MessageMacros.cmake
dev/a4-dance/data/: 05.asf  05_06.amc  05_07.amc  05_08.amc  05_09.amc  05_10.amc  05_12.amc  05_13.amc  05_14.amc  05_15.amc  05_17.amc  05_18.amc  05_19.amc  05_20.amc  143.asf  143_35.amc  55.asf  55_12.amc  55_25.amc  55_27.amc  60_02.amc  60_03.amc  60_04.amc  60_05.amc  60_06.amc  60_07.amc  60_08.amc  60_09.amc  60_10.amc  60_11.amc  60_12.amc  60_13.amc  60_14.amc  60_15.amc  61.asf  61_01.amc  61_02.amc  61_03.amc  61_04.amc  61_05.amc  (+15 more)
dev/a5-artrender/: .gitignore  CMakeLists.txt  README.md  artrender_app.cc  artrender_app.h  config.h.in  edge_mesh.cc  edge_mesh.h  main.cc
dev/a5-artrender/cmake/: ExternalProjectDownloadBuildInstall.cmake  UseOpenGL.cmake
dev/a5-artrender/data/: Thumbs.db
dev/a5-artrender/shaders/: artsy.frag  artsy.vert  gouraud.frag  gouraud.vert  outline.frag  outline.vert  phong.frag  phong.vert
dev/a6-harold/: CMakeLists.txt  README.md  billboards.cc  billboards.h  config.h.in  edge_mesh.cc  ground.cc  ground.h  harold_app.cc  harold_app.h  main.cc  sky.cc  sky.h
dev/a6-harold/cmake/: DownloadHelper.txt.in
dev/a6-harold/shaders/: artsy.frag  artsy.vert  outline.frag  outline.vert  stroke2d.frag  stroke2d.vert  stroke3d.vert
dev/gfxtest/: CMakeLists.txt  README.md  gfx_test.cc  gfx_test.h  main.cc
include/: README.md
include/MinGfx-1.0/: mingfx_config.h
lib/: README.md  libnanogui.dylib
lib/cmake/MinGfx-1.0/: MinGfxTargets-debug.cmake  MinGfxTargets.cmake
scripts/: clean.sh  setup.sh
share/: README.md
